# oc_projet12

./: .env.example  .gitignore  README.md  compose.yaml  main.py  pyproject.toml
dbt/sport_benefits/: .user.yml  dbt_project.yml  profiles.yml
infra/kestra/: .env.example  application.yaml  sport_benefits_change_rate.yaml  sport_benefits_operational_pipeline.yaml
infra/postgres-init/: 00_create_app_role.sh
infra/superset/: Dockerfile  superset_config.py
scripts/: 00_generate_env.sh  00_generate_kestra_env.sh  01_create_tables.sh  02_inject_sources.sh  03_create_raw_sport_activities.sh  03_create_raw_tables.sh  03_inject_benefit_parameters.sh  03_inject_fictionnal_data.sh  05_create_dbt_role_and_schemas.sh  05_inject_google_routes.sh  06_check_and_run_dbt.sh  06_sync_slack_publication_queue.sh  07_inject_google_routes.sh  08_publish_slack_activities.sh  09_change_bonus_rate_to_six_percent.sh  10_inject_demo_race.sh  11_sync_and_publish_demo_race.sh  12_start_kestra.sh  13_prepare_controlled_demo_state.sh  14_verify_delivery.sh  15_change_bonus_rate_to_nth_percent.sh  generate_env.sh
sql/data/: 01_inject_benefit_parameters.sql  02_change_bonus_rate_to_six_percent.sql  03_inject_demo_race.sql  04_change_bonus_rate_to_nth_percent.sql
sql/init/: 01_create_raw_tables.sql  02_create_raw_sport_activities.sql  03_create_dbt_role_and_schemas.sql  04_create_raw_benefit_parameters.sql  05_create_raw_google_routes_responses.sql  06_create_superset_roles_and_metadata.sql  07_create_ops_slack_publication_queue.sql  08_create_kestra_metadata.sql
(+22 files in other folders)
