[project]
name = "oc-projet12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googlemaps>=4.10.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "dbt-postgres>=1.10.1",
    "pytest>=9.1.1",
]
